# noaa-tides

./: .gitignore  Cargo.toml  LICENSE  README.md  main.rs
.github/workflows/: build-and-test.yaml  ci.yaml  release.yaml
examples/: highlow_tide_predictions.rs  hourly_tide_predictions.rs
src/: lib.rs  parameters.rs
src/products/: mod.rs  predictions.rs
