[package]
name = "noaa-tides"
version = "0.0.1"
edition = "2024"
description = "A library to fetch data from the NOAA tides and currents CO-OPS API"
repository = "https://github.com/jbandoro/noaa-tides"
keywords = ["noaa", "tides", "predictions"]
readme = "README.md"
license-file = "LICENSE"


[dependencies]
chrono = { version = "0.4.43", features = ["serde"] }
reqwest = { version = "0.13.1", features = ["json", "query"]}
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.17"
tokio = { version = "1.49.0", features = ["full"] }

[dev-dependencies]
mockito = "1.7.1"
serde_json = "1.0.148"
serde_urlencoded = "0.7.1"
